# carbonlang

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.cb  mllink$.lnk  notes.txt  reserved-words.txt
c2pardal/: Makefile  if_chain_bad.lua  if_chain_good.lua  test.c
carbon/: carbon.conf
carbonc/: CMakeLists.txt  ast.cc  ast.hh  ast_manip.cc  ast_manip.hh  carbonc.cc  carbonc.hh  codegen.hh  codegen_x64.cc  codegen_x64.hh  codegen_x64_linux_gas.cc  codegen_x64_linux_gas.hh  codegen_x64_windows_nasm.cc  codegen_x64_windows_nasm.hh  common.cc  common.hh  comptime.hh  desugar.cc  desugar.hh  emitter_x64_windows.cc  emitter_x64_windows.hh  exception.hh  fs.cc  fs.hh  ir.cc  ir.hh  lexer.cc  lexer.hh  main.cc  memory.cc  parser.cc  parser.hh  prettyprint.cc  prettyprint.hh  scope.cc  scope.hh  token.cc  token.hh  type_id.hh  type_system.cc  (+1 more)
carbonlang/: package.json
compiler/: CMakeLists.txt  ast.cc  ast.hh  ast_manip.cc  ast_manip.hh  codegen_x64.cc  codegen_x64.hh  codegen_x64_linux_gas.cc  common.cc  common.hh  compiler.cc  compiler.hh  comptime.hh  desugar.cc  ir.cc  ir.hh  lexer.cc  lexer.hh  main.cc  memory.hh  parser.cc  prettyprint.cc  prettyprint.hh  scope.cc  scope.hh  token.cc  token.hh  type_system.cc  type_system.hh
docs/: DOCS.md
res/: carbon.sc  carbon.sc.bkp
self/: project.par
std/: build.bat  carbon.conf  out.ir
stdlib/: build.bat  carbon.conf  ir_aoc.txt  ir_std_linux.txt  ir_std_mem.txt  ir_std_string.txt  ir_std_system.txt  out.ir
test-runner/: compile.txt
tests/: 001-helloworld.cb  002-functioncall.cb  builtin.cb  testas2  (+24 more)
(+796 files in other folders)
